--- a/client/src/pages/recipe-details/RecipeDetails.scss
+++ b/client/src/pages/recipe-details/RecipeDetails.scss
@@ -5,7 +5,7 @@
   min-height: calc(100vh - 64px - 56px);
   position: relative;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.1);
-  margin: 0;
+  margin: 24px;
   border-radius: 8px;
   overflow: hidden;
 
